--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -4,6 +4,7 @@ $darkGreen: #2D5F65;
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: #FFF;
 
     margin: 0em;
     width: 100%;
