made some progress with properties data base

--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -53,7 +53,10 @@ $darkGreen: #2D5F65;
 
             &-user{
                 &-img{
-                    
+
+                &:hover{
+                    cursor: pointer;
+                    }
                 }
             }
         }
