fixed some styles and added resources

--- a/src/components/styles/resourceComponent.scss
+++ b/src/components/styles/resourceComponent.scss
@@ -12,6 +12,8 @@ $lightPurble: #EEE8FE;
     background-color: $lightPurble;
     border-right: 10px solid $purble;
 
+    margin: 2em;
+
     &-img{
         width: 10em;
         height: 6em;
