made progress with property analyzer and set the groundwork for it

--- a/src/pages/analyzer.scss
+++ b/src/pages/analyzer.scss
@@ -1,12 +1,21 @@
-.analyzer-section{
+.large-analyzer-section{
+    display: flex;
+    flex-direction: row;
+    .analyzer-section{
 
-    margin: 2em; 
+        margin: 2em; 
+        
+        &-title{
+          
+        }
     
-    &-title{
-      
+        &-subtitle{
+            
+        }
     }
 
-    &-subtitle{
-        
+    .right-analyzer-section{
+
     }
 }
+
