--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -27,6 +27,9 @@ $darkGreen: #2D5F65;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                &-img{
+                    width: 173px;
+                }
             }
             &-list-div{
 
