--- a/src/components/styles/loginSignUpModalComponent.scss
+++ b/src/components/styles/loginSignUpModalComponent.scss
@@ -5,10 +5,13 @@ $lightBlue: #2291A9;
     align-items: center;
     justify-content: center;
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    margin: 0 !important;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
