implemented inherent risk level

--- a/src/components/styles/houseComponent.scss
+++ b/src/components/styles/houseComponent.scss
@@ -5,7 +5,7 @@ $lightPurble: #EEE8FE;
 .house-div{
     background-color: $lightPurble;
     width: 20em;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     border: $purble;
     color: $purble;
     border-width: 2px;
