--- a/src/components/styles/houseComponent.scss
+++ b/src/components/styles/houseComponent.scss
@@ -1,33 +1,65 @@
 $darkGreen: #2D5F65;
 $purble: #8358F5;
 $lightPurble: #EEE8FE;
+$darkBlue: #003E69;
 
 .house-div{
-    background-color: $lightPurble;
+    background-color: white;
     width: 20em;
-    border-radius: 0 0 10px 10px;
-    border: $purble;
-    color: $purble;
-    border-width: 2px;
-    border-style: solid;
+    color: $darkBlue;
+    border-radius: 10px;
+    border: 1px solid #E2E2E2;
+    box-shadow: 0px 3.22086px 16px 0px rgba(24, 54, 71, 0.10);
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
     text-align: center;
 
     margin: 2em;
+    margin-top: 0;
+    margin-bottom: 4em;
 
     &-img{
         width: 20em;
         height: 10em;
     }
+
+    &-info{
+
+        &-upper{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-top: 2em;
+            padding: 0 1em;
+            &-price{
+
+            }
+        
+            &-neighborhood{
+                
+            }
+        }
+    }
+
     .house-div-info-lower{
         display: flex;
-        flex-direction: row;
-        margin-top: 4em;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 1em;
+
+        &-aspects{
+            margin: 0.5em 1em;
+            display: flex;
+            flex-direction: row;
+
+            &-tag{
+                margin-right: 0.5em;
+            }
+        }   
 
         &-affinity{
             margin: 0.5em 1em;
