--- a/src/pages/propertyShowcase.scss
+++ b/src/pages/propertyShowcase.scss
@@ -1,19 +1,119 @@
 $darkGreen: #2D5F65;
 $purble: #8358F5;
 $lightPurble: #EEE8FE;
+$lightBlue: #F2F6FD;
+
+.ps-general{
+    display: flex;
+    flex-direction: column;
+}
+
+.ps-filters{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 7em;
+    background-color: #F7F7F7;
+    margin-bottom: 3em;
+
+    &-area{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        background-color: #F7F7F7;
+
+        &-input{
+            
+        }
+    }
+}
+
+.propertyShowcase{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.propertyShowcase-filtersSection{
+    margin: 1em;
+    width: 25%;
+    &-area{
+        display: flex;
+        flex-direction: column;
+        padding: 1em;
+        align-items: flex-start;
+        background-color: $lightBlue;
+        height: 60em;
+        border-radius: 10px;
+        border: 1px solid #E2E2E2;
+        box-shadow: 0px 3.22086px 16px 0px rgba(24, 54, 71, 0.10);
+
+        &-div-1{
+            display: flex;
+            flex-direction: column;
+
+            &-1{
+                display: flex;
+                flex-direction: row;
+
+                &-textInputs{
+                    display: flex;
+                    flex-direction: row;
+
+                    &-inner{
+                        margin: 1em;
+
+                        &-text{
+
+                        }
+
+                        &-input{
+                            height: 2em;
+
+
+                            border-radius: 6px;
+                            border: 1px solid #CDCFD0;
+                        }
+                    }
+                }
+
+                &-buttonInputs{
+                    &-button{
+                        background-color: white;
+                        border: none;
+                        width: auto;
+                        height: 2em;
+                        margin: 0 0.5em;
+                        border-radius: 6px;
+
+                        &:hover{
+                            cursor: pointer;
+                            background-color: darken($color: #FFFFFF, $amount: 5);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 .propertyShowcase-section{
     margin: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    width: 75%;
 
     &-loadDiv{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
 
         color: $purble;
         text-align: center;
