implemented some media queries for property showcase and landing

--- a/src/pages/propertyShowcase.scss
+++ b/src/pages/propertyShowcase.scss
@@ -91,7 +91,7 @@ $lightBlue: #F2F6FD;
                         border: none;
                         width: auto;
                         height: 2em;
-                        margin: 0 0.5em;
+                        margin: 0.5em;
                         border-radius: 6px;
 
                         &:hover{
