--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -18,8 +18,8 @@ $darkGreen: #2D5F65;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        padding: 1em 0;
 
-        padding: 0.5em 5em;
         &-left-div{
             display: flex;
             flex-direction: row;
@@ -27,6 +27,7 @@ $darkGreen: #2D5F65;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                margin-left: 1em;
                 &-img{
                     width: 173px;
                 }
@@ -45,7 +46,9 @@ $darkGreen: #2D5F65;
             }
         }
         &-right-div{
-            margin-left: 40em;
+            display: flex;
+            flex-direction: row;
+            margin-left: 25em;
 
             &-notif{
 
