--- a/src/components/styles/header-media.queries.scss
+++ b/src/components/styles/header-media.queries.scss
@@ -1,25 +1,11 @@
-$darkGreen: #2D5F65;
-
-.header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FFF;
-
-    margin: 0em;
-    width: 100%;
-
-    color: $darkGreen;
-
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
+@media (max-width: 1500px){
     &-container{
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        padding: 1em 0;
 
-        padding: 0.5em 5em;
         &-left-div{
             display: flex;
             flex-direction: row;
@@ -27,6 +13,7 @@ $darkGreen: #2D5F65;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                margin-left: 1em;
                 &-img{
                     width: 173px;
                 }
@@ -45,7 +32,9 @@ $darkGreen: #2D5F65;
             }
         }
         &-right-div{
-            margin-left: 40em;
+            display: flex;
+            flex-direction: row;
+            margin-left: 25em;
 
             &-notif{
 
