--- a/src/pages/login.scss
+++ b/src/pages/login.scss
@@ -18,17 +18,23 @@ $gray: #D9D9D9;
     
     &-input{
         margin-top: 1em;
-        border: none;
         background-color: $gray;
+        border-radius: 25px;
+        border: 1px solid #CDCFD0;
+
+        background: #F7F7F7;
 
         height: 3em;
     }
 }
 
 .login{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     &-section{
         @include flexSet();
-        margin: 10em 0;
+        margin: 10em 5em;
         &-div{
             margin-bottom: 3em;
             @include flexSet();
@@ -49,7 +55,7 @@ $gray: #D9D9D9;
             }
 
             &-button{
-                background-color: $darkGreen;
+                background: var(--azul-claro-plataforma-azul-claro-plataforma, #23B8C9);
                 text-decoration: none;
         
                 display: flex;
@@ -70,6 +76,12 @@ $gray: #D9D9D9;
                     cursor: pointer;
                 }
             }
+        }
+    }
+
+    .img-section{
+        &-img{
+            height: 110%;
         }
     }
 }
