--- a/src/pages/analyzer.scss
+++ b/src/pages/analyzer.scss
@@ -3,19 +3,78 @@
     flex-direction: row;
     .analyzer-section{
 
-        margin: 2em; 
+        margin: 2em 5em; 
+        width: 40em;
         
-        &-title{
-          
-        }
-    
-        &-subtitle{
-            
+        &-inner{
+
+
+            &-div{
+
+                margin-top: 2em;
+                margin-bottom: 4em;
+
+                &-title{
+
+                }
+
+                &-secondary{
+                    margin-top: 1em;
+
+                    &-select{
+                        height: 2em;
+                        border-radius: 6px;
+                        border: 1px solid #CDCFD0;
+                    }
+
+                    &-input{
+                        height: 2em;
+                        width: 20em;
+                        border-radius: 6px;
+                        border: 1px solid #CDCFD0;
+                    }
+                    
+                    &-checkbox{
+                        height: 1em;
+                        width: 1em;
+                        margin-top: 1em;
+                    }
+
+                    &-tag{
+
+                    }
+                }
+            }
         }
     }
 
     .right-analyzer-section{
+        margin: 2em 5em; 
 
+        &-container{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+
+            &-inner{
+                display: flex;
+                flex-direction: column;
+            }
+
+            &-tag{
+                
+            }
+
+            &-data{
+
+            }
+        }
+
+        h4{
+            font-weight: normal;
+
+            margin: 1em;
+        }
     }
 }
 
