--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -37,6 +37,7 @@ $darkGreen: #2D5F65;
                 &-ul{
                     display: flex;
                     flex-direction: row;
+                    list-style: none;
     
                     &-li{
                         margin: 2em;
