--- a/src/components/styles/resourceComponent.scss
+++ b/src/components/styles/resourceComponent.scss
@@ -9,7 +9,7 @@ $gray: #676767;
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.5em;
+    padding: 1em;
     height: 6em;
 
     background-color: $lightOrange;
@@ -35,6 +35,12 @@ $gray: #676767;
     
         &-p{
             color: $gray;
+        }
+
+        &-plower{
+
+            margin-top: 0.5em;
+            color: $orange;
         }
     }
 
