--- a/src/components/styles/resourceDetailComponent.scss
+++ b/src/components/styles/resourceDetailComponent.scss
@@ -1,8 +1,34 @@
-.resourceDetailComponent-div{
+$lightGray: #F7F7F7;
+$darkBlue: #043881;
 
-    margin: 2em 5em;
+.resourceDetailComponent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .resourceDetailComponent-div{
 
-    &-img{
-        width: 20em;
+        margin: 2em 5em;
+        padding: 1em;
+        width: 75%;
+    
+        background-color: $lightGray;
+
+        border-radius: 10px;
+
+        box-shadow: 0px 4px 14px 0px rgba(51, 58, 76, 0.15);
+    
+        &-img{
+            width: 20em;
+        }
+        &-title{
+            color: $darkBlue;
+        }
+        &-subtitle{
+            
+        }
+        &-body{
+           
+        }
     }
 }
