--- a/src/components/styles/houseDetailComponent.scss
+++ b/src/components/styles/houseDetailComponent.scss
@@ -57,8 +57,21 @@ html {
         flex-direction: row;
         flex-wrap: wrap;
         width: 80em;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
+        &-left{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 3em;
+        }
+        &-right{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            margin: 3em;
+        }
         &-inner{
             display: flex;
             flex-direction: column;
