--- a/src/pages/propertyShowcase.scss
+++ b/src/pages/propertyShowcase.scss
@@ -6,6 +6,9 @@ $lightBlue: #F2F6FD;
 .ps-general{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2em;
 }
 
 .ps-filters{
@@ -33,9 +36,17 @@ $lightBlue: #F2F6FD;
 
 .propertyShowcase{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+}
+
+.uhhmenu{
+    width: 90%;
+
+    margin-bottom: 5em;
+    display: flex;
+    flex-direction: row;
 }
 
 .propertyShowcase-filtersSection{
