--- a/src/pages/analyzer.scss
+++ b/src/pages/analyzer.scss
@@ -113,6 +113,22 @@ $lightBlue: #F2F6FD;
             flex-wrap: wrap;
             height: 80em;
 
+            &-cont{
+                display: flex;
+                flex-direction: column;
+
+                margin: 1em;
+
+                padding: 1em;
+
+                border-radius: 10px;
+                box-shadow: 0px 4px 14px 0px rgba(51, 58, 76, 0.15);
+                
+                &-h2{
+                    
+                }
+            }
+
             &-inner{
                 display: flex;
                 flex-direction: column;
