--- a/src/components/styles/houseDetailComponent.scss
+++ b/src/components/styles/houseDetailComponent.scss
@@ -82,7 +82,7 @@ html {
             align-items: center;
             margin: 2em;
             &-title{
-                
+                width: 20em;
             }
 
             &-value{
